[package]
name = "spawning-drunagor"
version = "0.3.0"
authors = ["ALeX Kazik <alex@kazik.de>"]
edition = "2024"
license = "MIT"

[dependencies]
enum-tools = { version = "0.5", default-features = false }
getrandom = { version = "0.3.1", default-features = false, features = ["wasm_js"] }
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
serde = { version = "1", default-features = false, features = ["serde_derive"] }
serde-wasm-bindgen = { version = "0.6", default-features = false, optional = true }
serde_repr = { version = "0.1", default-features = false }
web-sys = { version = "0.3", default-features = false, features = ["HtmlTextAreaElement", "HtmlSelectElement"], optional = true }
yew = { version = "0.21", default-features = false, features = ["csr"] }
yew-bootstrap = { version = "0.11.1", default-features = false }
yewdux = { version = "0.11.0", default-features = false }

[features]
default = ["debug"]
debug = ["dep:serde-wasm-bindgen", "dep:web-sys"]

[[bin]]
name = "copy-and-link"
